HW06. Change Arrays.asList() to List.of()