@@ -6,6 +6,7 @@ import ru.javawebinar.topjava.model.User;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
+import java.util.List;
 
 import static ru.javawebinar.topjava.model.AbstractBaseEntity.START_SEQ;
 
@@ -20,7 +21,7 @@ public class UserTestData {
     public static final User admin = new User(ADMIN_ID, "Admin", "admin@gmail.com", "admin", Role.USER, Role.ADMIN);
 
     public static User getNew() {
-        return new User(null, "New", "new@gmail.com", "newPass", 1555, false, new Date(), Arrays.asList(Role.USER, Role.ADMIN));
+        return new User(null, "New", "new@gmail.com", "newPass", 1555, false, new Date(), List.of(Role.USER, Role.ADMIN));
     }
 
     public static User getUpdated() {
